--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NsK-cK-E49">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Vpd-MR-Tua">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -606,6 +606,7 @@ I love helping my fellow students when they are in need. Coming from a disadvant
         <!--Tab Bar Controller-->
         <scene sceneID="tLh-vk-26e">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JEg-Qq-upX" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tabBarController id="NsK-cK-E49" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yct-bh-FFB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
@@ -618,14 +619,13 @@ I love helping my fellow students when they are in need. Coming from a disadvant
                         <segue destination="z9u-XT-8iD" kind="relationship" relationship="viewControllers" id="Qp4-Bq-Cxd"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JEg-Qq-upX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="347" y="16"/>
         </scene>
         <!--Login-->
         <scene sceneID="BTB-dr-GkK">
             <objects>
-                <viewController title="Login" id="Vpd-MR-Tua" sceneMemberID="viewController">
+                <viewController title="Login" id="Vpd-MR-Tua" customClass="LogInScreenController" customModule="ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="V2H-p7-83k">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -652,6 +652,9 @@ I love helping my fellow students when they are in need. Coming from a disadvant
                                 <rect key="frame" x="166" y="405" width="42" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Log In"/>
+                                <connections>
+                                    <segue destination="NsK-cK-E49" kind="show" id="Lj2-0z-wEY"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -660,7 +663,7 @@ I love helping my fellow students when they are in need. Coming from a disadvant
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZML-sA-5NW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1045.5999999999999" y="15.517241379310345"/>
+            <point key="canvasLocation" x="-503" y="16"/>
         </scene>
     </scenes>
     <resources>
