--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -86,7 +86,7 @@
                                 <rect key="frame" x="0.0" y="88" width="375" height="641"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Elg-Ak-R0F">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="601"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="591"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="sender" rowHeight="100" id="g7d-82-SfK" customClass="MessageScreenMessageView" customModule="ios" customModuleProvider="target">
@@ -97,10 +97,10 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" verticalHuggingPriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="rWa-Es-sMc">
-                                                            <rect key="frame" x="15" y="11" width="345" height="78"/>
+                                                            <rect key="frame" x="306.66666666666669" y="11" width="53.333333333333314" height="78"/>
                                                             <subviews>
                                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rfd-my-cIp">
-                                                                    <rect key="frame" x="10" y="10" width="325" height="58"/>
+                                                                    <rect key="frame" x="10" y="10" width="33.333333333333336" height="58"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -117,13 +117,14 @@
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstAttribute="bottomMargin" secondItem="rWa-Es-sMc" secondAttribute="bottom" id="1NX-cy-FaE"/>
+                                                        <constraint firstItem="rWa-Es-sMc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Lbn-gf-dhi" secondAttribute="leadingMargin" id="1Nm-53-4mz"/>
                                                         <constraint firstItem="rWa-Es-sMc" firstAttribute="top" secondItem="Lbn-gf-dhi" secondAttribute="topMargin" id="Neh-Op-gW8"/>
-                                                        <constraint firstItem="rWa-Es-sMc" firstAttribute="leading" secondItem="Lbn-gf-dhi" secondAttribute="leadingMargin" id="WGU-f3-WuU"/>
                                                         <constraint firstAttribute="trailingMargin" secondItem="rWa-Es-sMc" secondAttribute="trailing" id="ykf-rE-JEB"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
                                                 <connections>
                                                     <outlet property="textField" destination="Rfd-my-cIp" id="taI-0X-bHS"/>
+                                                    <outlet property="textView" destination="rWa-Es-sMc" id="dru-fc-1iV"/>
                                                 </connections>
                                             </tableViewCell>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="receiver" rowHeight="100" id="Ock-4p-qJw" customClass="MessageScreenMessageView" customModule="ios" customModuleProvider="target">
@@ -134,10 +135,10 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" verticalHuggingPriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="467-u7-hsZ">
-                                                            <rect key="frame" x="15" y="11" width="345" height="78"/>
+                                                            <rect key="frame" x="15.000000000000004" y="11" width="53.333333333333343" height="78"/>
                                                             <subviews>
                                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" insetsLayoutMarginsFromSafeArea="NO" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="luu-00-Wdx">
-                                                                    <rect key="frame" x="10" y="10" width="325" height="58"/>
+                                                                    <rect key="frame" x="10" y="10" width="33.333333333333336" height="58"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -153,34 +154,35 @@
                                                         </view>
                                                     </subviews>
                                                     <constraints>
+                                                        <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="467-u7-hsZ" secondAttribute="trailing" id="MVG-Ud-BCZ"/>
                                                         <constraint firstItem="467-u7-hsZ" firstAttribute="top" secondItem="n3f-SP-aeO" secondAttribute="topMargin" id="gvH-6U-p3f"/>
                                                         <constraint firstAttribute="bottomMargin" secondItem="467-u7-hsZ" secondAttribute="bottom" id="mDu-EG-oqi"/>
                                                         <constraint firstItem="467-u7-hsZ" firstAttribute="leading" secondItem="n3f-SP-aeO" secondAttribute="leadingMargin" id="uZv-fM-6x1"/>
-                                                        <constraint firstAttribute="trailingMargin" secondItem="467-u7-hsZ" secondAttribute="trailing" id="uug-6a-eLM"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
                                                 <connections>
                                                     <outlet property="textField" destination="luu-00-Wdx" id="fDD-gD-t4a"/>
+                                                    <outlet property="textView" destination="467-u7-hsZ" id="pVz-lB-t9q"/>
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
                                     </tableView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="uHc-dw-SgO">
-                                        <rect key="frame" x="0.0" y="601" width="375" height="40"/>
+                                        <rect key="frame" x="0.0" y="591" width="375" height="50"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lGW-ML-YXG">
-                                                <rect key="frame" x="15" y="15" width="311" height="17"/>
+                                                <rect key="frame" x="15" y="15" width="311" height="27"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tue-64-ayH">
-                                                <rect key="frame" x="331" y="15" width="36" height="17"/>
+                                                <rect key="frame" x="331" y="15" width="36" height="27"/>
                                                 <state key="normal" title="Send"/>
                                             </button>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="nEK-el-2wT"/>
+                                            <constraint firstAttribute="height" constant="50" id="nEK-el-2wT"/>
                                         </constraints>
                                         <edgeInsets key="layoutMargins" top="15" left="15" bottom="8" right="8"/>
                                     </stackView>
