--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -48,6 +48,32 @@
             </objects>
             <point key="canvasLocation" x="-570.39999999999998" y="2587.6847290640394"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="WLN-A8-ifZ">
+            <objects>
+                <viewController id="PtP-35-bJy" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hbc-LY-7X2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="blK-rT-IzA">
+                                <rect key="frame" x="33" y="109" width="240" height="141"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="4Yf-nz-RWw"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T3R-fq-Uok" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-570" y="3291"/>
+        </scene>
         <!--Find Delegate-->
         <scene sceneID="tne-QT-ifu">
             <objects>
